# quizer-tg

./: .flake8  .gitignore  .pydocstyle  Pipfile  README.md  dodo.py  file_parser.py  newbot.pot  newbot.py  pyproject.toml  requirements.txt  setup.py  test.py  user_status.py
QuizerBot/: __main__.py  file_parser.py  newbot.py  user_status.py
QuizerBot/l10n/eng/LC_MESSAGES/: newbot.po
doc/: about.rst  conf.py  index.rst  newbot.rst  parser.rst
test_data/: MYQUEST.txt  parser.txt  quest.txt
